<resources>
    <string name="app_name">PhillipsGalleryMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_clear">Clear</string>

    <string name="example_simple_title">01. Simple</string>

    <string name="example_simple_description">Demonstrates basic functionality, shows events as text entries.</string>

    <string name="example_imageview_title">02. ImageView</string>

    <string name="example_imageview_description">Demonstrates showing locations on a floor plan displayed with ImageView.</string>

    <string name="example_googlemaps_basic_title">03. Google Maps - Basic</string>

    <string name="example_googlemaps_basic_description">Demonstrates showing location on GoogleMap</string>

    <string name="example_googlemaps_overlay_title">04. Google Maps - Overlay</string>

    <string name="example_googlemaps_overlay_description">Demonstrates showing location over a floor plan which is loaded as map overlay. Shows both IndoorAtlas location and platform location (GPS).</string>

    <string name="location_permission_request_title">Permission required</string>

    <string name="location_permission_request_rationale">Access to coarse location is required for faster first fix.</string>

    <string name="location_permission_denied_message">No access to locations. Time to first fix may be severely delayed!</string>

    <string name="storage_permission_denied_message">No access to external storage. Permission needed for displaying floor plans</string>

    <string name="button_ok">OK</string>

    <string name="button_cancel">Cancel</string>

    <string name="button_close">Close</string>

    <string name="permission_button_accept">Sure</string>

    <string name="permission_button_deny">Deny</string>

    <string name="configuration_incomplete_title">Configuration incomplete</string>

    <string name="configuration_incomplete_message">API credentials needed, please see gradle.properties in project root level.</string>

    <string name="dialog_set_location_title">Set location</string>

    <string name="error_could_not_set_location">Error setting location: %s</string>

    <string name="action_share">Share...</string>

    <string name="share_dialog_title">Your shared name?</string>

    <string name="current_channel">Current channel: %s</string>

    <string name="error_loading_floor_plan">Error while loading floor plan</string>

    <string name="title_my_name">Me: %s</string>

    <string name="menu_set_channel">Set channel</string>

    <string name="channel_dialog_title">Channel name</string>

    <string name="error_setting_channel">Setting channel failed: %s</string>

    <string name="example_sharelocation_description">Demonstrates sharing ones location via 3rd party cloud service.</string>

    <string name="example_sharelocation_title">05. Location sharing</string>

    <string name="menu_change_color">Change color</string>

    <string name="example_credentials_title">06. Set credentials</string>

    <string name="example_credentials_description">Demonstrates setting credentials from code</string>

    <string name="dialog_request_options_title">Location request options</string>

    <string name="fastest_interval_label">Fastest interval (milliseconds)</string>

    <string name="shortest_displacement_label">Shortest displacement (meters)</string>

    <string name="default_label">use default</string>

    <string name="example_regions_description">Demonstrates automatic region transitions and vertical position information</string>

    <string name="example_regions_title">07. Regions</string>

    <string name="region_information">Region information</string>

    <string name="venue_outside">Outside mapped area</string>

    <string name="venue_inside">In venue</string>

    <string name="floor_plan_outside">No floor plan</string>

    <string name="floor_plan_inside">In floor plan</string>

    <string name="floor_level">Floor level</string>

    <string name="floor_certainty_percentage">Certainty: %.1f %%</string>
    <string name = "indooratlas_api_key">3ccd78e7-e596-4247-8335-befb2c022e68</string>
    <string name="indooratlas_api_secret">LcoD+ZSfkat3WGxSG32aajf6jWAwHg9ApX6SKe+fi0BMb3vlVnr2uCUN+WkutT3fgsvVZK4CwEf/8/B0TRBdlOyNc0IPMGAUoGFTDb8FQf+5fmwNMQOQinS1HrwNkg==</string>

    <!-- Background example -->


    <string name="example_background_description">Demonstrates running IndoorAtlas location service in the background</string>

    <string name="example_background_title">08. Background mode</string>

    <string name="button_start_background">Request location updates</string>

    <string name="button_stop_background">Remove location updates</string>

    <string name="button_share_background">Share events</string>

    <string name="text_background_received">Last received location: %s</string>

    <string name="button_reset_background">Clear stored events</string>

    <string name="text_background_example">Request location updates with a PendingIntent. Updates are received by an IntentService that stores them to a file. Note that you can leave the application and still receive updates. </string>

    <!-- Orientation example -->


    <string name="example_orientation_description">Demonstrates displaying the 3D orientation of the device. Panorama image credit: ESO (Very Large Telescope ready for action)</string>

    <string name="example_orientation_title">09. Orientation</string>

    <string name="text_bearing_initial">Bearing: no updates</string>

    <string name="text_bearing">Bearing: %1$5.1f\u00b0</string>

    <string name="text_heading_initial">Heading: no updates</string>

    <string name="text_heading">Heading: %1$5.1f\u00b0</string>

    <string name="text_orientation_initial">Orient.: no updates</string>

    <string name="text_orientation">Orient.: [%1$5.2f,%2$5.2f,%3$5.2f,%4$5.2f]</string>
</resources>
