<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout  android:orientation="vertical" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/activity_background" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_info" android:layout_margin="4dp" android:layout_alignParentTop="true" android:text="@string/text_background_example"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/button_start" android:layout_margin="4dp" android:text="@string/button_start_background" android:layout_below="@id/text_info" android:onClick="onStart"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/button_stop" android:layout_margin="4dp" android:text="@string/button_stop_background" android:layout_below="@id/button_start" android:onClick="onStop"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/button_share" android:layout_margin="4dp" android:text="@string/button_share_background" android:layout_below="@id/button_stop" android:onClick="onShare"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_location" android:layout_margin="4dp" android:layout_below="@id/button_share"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/button_reset" android:layout_margin="4dp" android:text="@string/button_reset_background" android:onClick="onReset" android:layout_alignParentBottom="true"/>

</RelativeLayout>