<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:padding="10dp" android:orientation="vertical">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fastest_interval_label"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/edit_text_interval" android:hint="@string/default_label" android:ems="10" android:inputType="number"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/shortest_displacement_label"/>

    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/edit_text_displacement" android:hint="@string/default_label" android:ems="10" android:inputType="numberDecimal"/>

</LinearLayout>