<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout  android:paddingTop="0dp" android:paddingRight="0dp" android:paddingLeft="0dp" android:paddingBottom="0dp" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/activity_orientation" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <android.opengl.GLSurfaceView android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/gl_view"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/text_orientation" android:layout_alignParentBottom="true" android:fontFamily="monospace" android:typeface="monospace" android:textColor="@color/panorama_text_color" android:text="@string/text_orientation_initial"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/text_heading" android:fontFamily="monospace" android:typeface="monospace" android:textColor="@color/panorama_text_color" android:text="@string/text_heading_initial" android:layout_above="@id/text_orientation"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/text_bearing" android:fontFamily="monospace" android:typeface="monospace" android:textColor="@color/panorama_text_color" android:text="@string/text_bearing_initial" android:layout_above="@id/text_heading"/>

</RelativeLayout>